<resources>
    <string name="app_name">User Register Challenge</string>
    <string name="no_user_registered_yet_label">Ainda não há nenhum usuário cadastrado.</string>
    <string name="no_user_image_content_description">Imagem: Sem usuários</string>
    <string name="item_not_deleted_error_body">O Item NÃO foi deletado com sucesso.</string>
    <string name="name_label">Nome</string>
    <string name="email_label">Email</string>
    <string name="persona_email_label">E-mail pessoal</string>
    <string name="address_label">Endereço</string>
    <string name="address_example_hint">R. Aprigio Francisco Maciel, n°12</string>
    <string name="born_date_label">Data de nascimento</string>
    <string name="born_date_example">10/02/1995</string>
    <string name="cpf_example_hint">123.456.789-12</string>
    <string name="cpf_label">CPF</string>
    <string name="man_label">Homem</string>
    <string name="woman_label">Mulher</string>
    <string name="gender_label">Genero</string>
    <string name="continue_button_label">Continuar</string>
    <string name="email_invalid_error_message">O Email informado é inválido.</string>
    <string name="name_very_shot_error_message">É necessário que o nome de usuário tenha mais de 30 caracteres.</string>
    <string name="minor_eighteen_error_message">O usuário deve ser maior de 18 anos.</string>
    <string name="nick_name_label">Apelido</string>
    <string name="nick_name_hint_label">Apelido do usuário</string>
    <string name="password_label">Senha</string>
    <string name="password_hint_label">Sua senha de 8 digitos</string>
    <string name="repeat_password_label">Repita a senha</string>
    <string name="repeat_password_hint_label">Confime a sua senha.</string>
    <string name="create_user_button_label">Criar Conta</string>
    <string name="create_user_title">Agora vamos criar seu metodo de acesso.</string>
    <string name="unknown_error">Error Desconhecido!</string>
    <string name="something_wrong_when_you_cadastrate">Houve Algum erro ao tentar te cadastrar.</string>
    <string name="invalid_password_message">Sua senha é inválida!</string>
    <string name="password_is_not_same">As senhas não batem.</string>
    <string name="nick_name_already_exists_error_message">Esse apelido já existe.</string>
    <string name="user_created_with_successful">Usuário Cadastrado com sucesso</string>
    <string name="cpf_or_cnpj_alert_dialog_body">A conta a ser criado é do Tipo CPF?</string>
    <string name="yes_label">Sim</string>
    <string name="no_label">Não</string>
    <string name="cnpj_label">CNPJ</string>
    <string name="cnpj_example_hint">12.345.678/0002-00</string>
    <string name="new_user_label">Novo Usuário</string>
    <string name="update_button_label">Atualizar</string>
    <string name="select_a_picture_error">Selecione uma foto.</string>
    <string name="user_updated_with_success">Usuário Atualizado com Sucesso!</string>
    <string name="network_error_message">Houver algum erro relacionado a internet.</string>
    <string name="query_user_hint">Procurar usuário</string>
</resources>