<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.updatescreen.view.UpdateActivity">
    <!--
        ;;userImage;;
        ; ;gender;;
    -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">
        <ImageView
            android:id="@+id/image_user_photo_picker_update"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_user"
            android:layout_gravity="center" />
        <TextView
            android:id="@+id/text_name_update_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name_field_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_name_field_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name_label"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/text_nick_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/nick_name_label"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_nick_name_field_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_nick_name_field_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nick_name_hint_label"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_address_label_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/address_label"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_address_field_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/address_example_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/text_email_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email_label"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_email_address_field_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/persona_email_label"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/born_date_label"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_born_date_field_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/born_date_example"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cpf_label"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_cpf_cnpj_field_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/cpf_example_hint"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/text_user_gender_input_label_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_label"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_cpf_cnpj_field" />
        <RadioGroup
            android:id="@+id/radio_group_gender_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_button_man_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man_label"/>
            <RadioButton
                android:id="@+id/radio_button_woman_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman_label"/>
        </RadioGroup>

        <Button
            android:id="@+id/button_update_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            android:text="@string/update_button_label"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>