<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/image_user_photo_picker"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <ImageButton
            android:id="@+id/get_image_pickert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user"
            app:layout_constraintEnd_toEndOf="@id/image_user_photo_picker"
            app:layout_constraintBottom_toBottomOf="@id/image_user_photo_picker"/>
        <TextView
            android:id="@+id/text_user_name_input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/name_label"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_user_photo_picker" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/text_user_name_input_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_name_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name_label"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/text_user_email_address_input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/email_label"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_name_field" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email_address_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/text_user_email_address_input_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_email_address_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/persona_email_label"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/text_user_address_input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/address_label"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_email_address_field" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_address_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/text_user_address_input_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_address_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/address_example_hint"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/text_user_born_date_input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/born_date_label"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_address_field" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_born_date_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/text_user_born_date_input_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_born_date_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:hint="@string/born_date_example"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_user_cpf_cnpj_input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/cpf_label"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_born_date_field" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_cpf_cnpj_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/text_user_cpf_cnpj_input_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_cpf_cnpj_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="date"
                android:hint="@string/cpf_example_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_user_gender_input_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/gender_label"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_cpf_cnpj_field" />
        <RadioGroup
            android:id="@+id/radio_group_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"

            app:layout_constraintTop_toBottomOf="@id/text_user_gender_input_label"
            app:layout_constraintStart_toStartOf="@id/text_user_gender_input_label"
            app:layout_constraintBottom_toTopOf="@id/button_next_step"
            app:layout_constraintVertical_bias="0">
            <RadioButton
                android:id="@+id/radio_button_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man_label"/>
            <RadioButton
                android:id="@+id/radio_button_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman_label"/>
        </RadioGroup>

        <Button
            android:id="@+id/button_next_step"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:layout_margin="20dp"
            android:text="@string/continue_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>